Create a differential drive robot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,22 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+
+
+
+## --------------------- Launch ------------------------##
+install(DIRECTORY 
+    launch 
+    description
+    worlds
+    DESTINATION share/${PROJECT_NAME}
+  )
+
+## --- End Lauch install ------------------------------## 
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
