--- a/package.xml
+++ b/package.xml
@@ -4,11 +4,15 @@
   <name>diff_drive_robot</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="sanjeevsapkota35@gmail.com">sun9000</maintainer>
-  <license>TODO: License declaration</license>
+  <maintainer email="hundredtwentyfive25@gmail.com">system125</maintainer>
+  <license>GNU GPL3</license>
 
+  
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+
+  <exec_depend>launch</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
